Remove KG kernel activity API
